--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -27,8 +27,8 @@
             Width="70" 
             Background="Transparent"
             Command="{Binding OpenCommand}"
-            Canvas.Left="700" 
-            Canvas.Top="100" />
+            Canvas.Left="264" 
+            Canvas.Top="102" />
         <Button 
             Name="RewindButton" 
             Content="{iconPacks:PackIconMaterial ChevronDoubleLeft, Width=32, Height=32}"
@@ -38,8 +38,8 @@
             Height="70"
             Background="Transparent"
             Command="{Binding RewindCommand}"
-            Canvas.Left="800" 
-            Canvas.Top="100" />
+            Canvas.Left="342" 
+            Canvas.Top="102" />
         <Button 
             Name="PlayButton" 
             Content="{iconPacks:PackIconMaterial Play, Width=32, Height=32}"
@@ -49,8 +49,8 @@
             Height="70"
             Background="Transparent"
             Command="{Binding PlayCommand}"
-            Canvas.Left="900"
-            Canvas.Top="100" />
+            Canvas.Left="420"
+            Canvas.Top="102" />
         <Button
             Name="ForwardButton" 
             Content="{iconPacks:PackIconMaterial ChevronDoubleRight, Width=32, Height=32}"
@@ -60,8 +60,8 @@
             Height="70"
             Background="Transparent"
             Command="{Binding ForwardCommand}"
-            Canvas.Left="1000"
-            Canvas.Top="100" />
+            Canvas.Left="490"
+            Canvas.Top="102" />
         <Button
             Name="StopButton" 
             Content="{iconPacks:PackIconMaterial Stop, Width=32, Height=32}"
@@ -71,9 +71,9 @@
             Height="70"
             Background="Transparent"
             Command="{Binding StopCommand}"
-            Canvas.Left="1100"
-            Canvas.Top="100" />
-        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Canvas.Left="10" Canvas.Top="10" Width="1060" >Sound Wizard</TextBox>
+            Canvas.Left="560"
+            Canvas.Top="102" />
+        <TextBox IsReadOnly="True" BorderThickness="5" FontFamily="Consolas" FontWeight="UltraBold" FontStyle="Italic" VerticalContentAlignment="Center" TextAlignment="Center" Background="Gold" FontSize="45" Canvas.Left="95" Canvas.Top="19" Width="420" >Sound Wizard</TextBox>
         <ListBox Name="Playlist"
                  ItemsSource="{Binding Playlist}"
                  Opacity="0.8"
@@ -124,7 +124,30 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <Slider IsMoveToPointEnabled="True" Name="AudioSlider" Minimum="0" Maximum="1" ValueChanged="Volume_ValueChanged" AutoToolTipPlacement="BottomRight" AutoToolTipPrecision="2" Canvas.Left="20" Canvas.Top="119" Width="675" />
+        <StackPanel Height="39" Canvas.Left="20" Orientation="Horizontal" Canvas.Top="119">
+            <Label 
+                x:Name="AudioSliderLabel"
+                Content="{iconPacks:PackIconMaterial VolumeLow, Height=25, Width=25}"
+                Width="35" Margin="0,2"
+        />
+            <Slider 
+                x:Name="AudioSlider" 
+                IsMoveToPointEnabled="True"
+                Minimum="0"
+                Maximum="1"
+                ValueChanged="Volume_ValueChanged"
+                AutoToolTipPlacement="BottomRight"
+                AutoToolTipPrecision="2"
+                Width="135"
+                Style="{DynamicResource FlatSlider}" 
+                Margin="0,10" 
+                />
+            <Label 
+                x:Name="AudioSliderLabel_Copy"
+                Content="{iconPacks:PackIconMaterial VolumeHigh, Height=25, Width=25}"
+                Width="35" Margin="0,2"
+        />
+        </StackPanel>
 
         <ToggleButton 
             x:Name = "tb"
@@ -133,7 +156,7 @@
             IsChecked="{Binding Path=Repeat}"
             HorizontalAlignment = "Center"
             Canvas.Left="20"
-            Canvas.Top="155" 
+            Canvas.Top="197" 
             Height="43"
             Width="43"
             Style="{DynamicResource MetroCircleButtonStyle}"
@@ -144,7 +167,7 @@
             ToolTip="Full Screen Mode"
             Style="{DynamicResource MetroCircleButtonStyle}"
             Canvas.Left="68" 
-            Canvas.Top="155" 
+            Canvas.Top="197" 
             Height="43"
             Width="43" />
         <Button
@@ -158,12 +181,20 @@
             Command="{Binding ExitCommand}"
             HorizontalAlignment="Left"
             VerticalAlignment="Bottom"
-            Canvas.Left="1075"
+            Canvas.Left="20"
             Canvas.Top="10" />
-        <Border BorderThickness="2" BorderBrush="Black" Height="43" Canvas.Left="1000" Canvas.Top="202" Width="170">
+        <Border BorderThickness="2" BorderBrush="Black" Height="61" Canvas.Left="536" Canvas.Top="19" Width="242">
             <Label Background="White" Name="songStatus"  HorizontalContentAlignment="Center" />
         </Border>
-        <Slider IsMoveToPointEnabled="True" Name="seekBar" Height="35" ValueChanged="ChangeValue" Canvas.Left="20" Canvas.Top="210" Width="975" />
+        <Slider 
+            IsMoveToPointEnabled="True" 
+            Name="seekBar" Height="35" 
+            ValueChanged="ChangeValue" 
+            Canvas.Left="118" 
+            Canvas.Top="210" 
+            Width="877"
+            Style="{DynamicResource FlatSlider}" 
+            />
         <Grid>
             <MediaElement LoadedBehavior="Manual" Name="MediaPlayer" VerticalAlignment="Top" Visibility="Visible"
                           Width="600" Height="385" Margin="584,279,-584,-279" />
