--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -87,54 +87,32 @@
             Canvas.Left="320"
             Canvas.Top="16" />
         <DataGrid x:Name="Playlist"
-                 ItemsSource="{Binding Playlist}"
-                 Opacity="0.8"
-                 DragDrop.Drop="Playlist_Drop"
-                 Background="DimGray"
-                 BorderBrush="Transparent"
-                 ScrollViewer.VerticalScrollBarVisibility="Visible"
-                 AllowDrop="True"
-                 SelectionChanged="Playlist_SelectionChanged" HorizontalAlignment="Right" Width="569" Height="385" Canvas.Top="276" Canvas.Left="10">
-            <DataGrid.ItemTemplate>
-                <DataTemplate>
-                    <Grid ShowGridLines="True">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto" />
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="220" />
-                            <ColumnDefinition Width="70" />
-                            <ColumnDefinition Width="60" />
-                            <ColumnDefinition Width="60" />
-                            <ColumnDefinition Width="65" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock x:Name="Title"
-                           HorizontalAlignment="Left"
-                           Grid.Column="0" Grid.Row="0"
-                           Text="{Binding Title}"
-                           ToolTip="{Binding Title}" />
-                        <TextBlock x:Name="Album"
-                           HorizontalAlignment="Center"
-                           Grid.Column="1" Grid.Row="0"
-                           Text="{Binding Album}"
-                           ToolTip="{Binding Album}" />
-                        <TextBlock x:Name="Artist"
-                           HorizontalAlignment="Center"
-                           Grid.Column="2" Grid.Row="0"
-                           Text="{Binding Artist}"
-                           ToolTip="{Binding Artist}" />
-                        <TextBlock x:Name="Genre"
-                           HorizontalAlignment="Center"
-                           Grid.Column="3" Grid.Row="0"
-                           Text="{Binding Genre}"
-                           ToolTip="{Binding Genre}" />
-                        <TextBlock x:Name="Duration"
-                           Grid.Column="4" Grid.Row="0"
-                           HorizontalAlignment="Center"
-                           Text="{Binding DurationFormated}" />
-                    </Grid>
-                </DataTemplate>
-            </DataGrid.ItemTemplate>
+            ItemsSource="{Binding Playlist}"
+            AutoGenerateColumns="False"
+            Opacity="0.8"
+            DragDrop.Drop="Playlist_Drop"
+            Background="DimGray"
+            BorderBrush="Transparent"
+            AllowDrop="True"
+            SelectionChanged="Playlist_SelectionChanged"
+            HorizontalAlignment="Right" Width="569" Height="385" Canvas.Top="276" Canvas.Left="10">
+            <DataGrid.Columns>
+                <DataGridTextColumn
+                    Binding="{Binding Title}"
+                    Header="Title"/>
+                <DataGridTextColumn
+                    Binding="{Binding Album}"
+                    Header="Album" />
+                <DataGridTextColumn
+                    Binding="{Binding Artist}"
+                    Header="Artist" />
+                <DataGridTextColumn
+                    Binding="{Binding Genre}"
+                    Header="Genre" />
+                <DataGridTextColumn
+                    Binding="{Binding DurationFormated}"
+                    Header="Duration" />
+            </DataGrid.Columns>
         </DataGrid>
         <StackPanel Height="39" Canvas.Left="20" Orientation="Horizontal" Canvas.Top="119">
             <Label
