--- a/Playground/MainWindow.xaml
+++ b/Playground/MainWindow.xaml
@@ -8,7 +8,6 @@
     xmlns:viewModel="clr-namespace:Playground.ViewModel"
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
     mc:Ignorable="d"
-    KeyDown="MainWindowKeys"
     Title="Sound Wizard" Height="700"  Width="1200" Icon="PlayerSkin\SoundWizard.ico"
     BorderThickness="0"
     GlowBrush="#8C9EFF"
@@ -198,4 +197,11 @@
                           Width="600" Height="385" Margin="584,279,-584,-279" />
         </Grid>
     </Canvas>
+    <Window.InputBindings>
+        <KeyBinding Command="{Binding ReversePositionCommand}" Key="Left"></KeyBinding>
+        <KeyBinding Command="{Binding ForwardPositionCommand}" Key="Right"></KeyBinding>
+        <KeyBinding Command="{Binding VolumeIncreaseCommand}" Key="Add" 
+                    CommandParameter="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Window}}, Path=Slider}">
+        </KeyBinding>
+    </Window.InputBindings>
 </controls:MetroWindow>
