--- a/SoundWizard/MainWindow.xaml
+++ b/SoundWizard/MainWindow.xaml
@@ -32,6 +32,7 @@
             Width="70"
             Background="Transparent"
             Command="{Binding OpenCommand}"
+            CommandParameter="OpenButton"
             Canvas.Left="24"
             Canvas.Top="16" />
         <Button KeyboardNavigation.IsTabStop="False"
