--- a/SoundWizard/ErrorWindow.xaml
+++ b/SoundWizard/ErrorWindow.xaml
@@ -1,19 +1,36 @@
-﻿<Window x:Class="SoundWizard.ErrorWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SoundWizard"
-        mc:Ignorable="d"
-        Title="ErrorWindow" Height="125" Width="300">
+﻿<controls:MetroWindow 
+    x:Class="SoundWizard.ErrorWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+    mc:Ignorable="d"
+    Title="Error Window"
+    Height="125"
+    Width="300"
+    
+    BorderThickness="1"
+    GlowBrush="{DynamicResource AccentColorBrush}"
+    WindowStartupLocation="CenterScreen">
+    <controls:MetroWindow.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <!-- this window should be blue -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Orange.xaml" />
+                <!-- and should use the light theme -->
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </controls:MetroWindow.Resources>
     <Grid>
-        <TextBlock x:Name="ErrorText" Margin="0,0,0,53" TextAlignment="Center">
+        <TextBlock x:Name="ErrorText" Margin="0,15,0,30" TextAlignment="Center">
             Invalid audio format.
         </TextBlock>
-        <Button Click="CloseOnClick" Margin="62,54,62,10">
+        <Button Click="CloseOnClick" Margin="62,49,62,15">
             <TextBlock>
                 OK
             </TextBlock>
         </Button>
     </Grid>
-</Window>
+</controls:MetroWindow>
